temp comment out mac/windows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,42 +35,42 @@ jobs:
           echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
           echo env UNITY_PATH: ${{ env.UNITY_PATH }}
 
-  macos:
-    runs-on: 	macos-latest
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+  # macos:
+  #   runs-on: macos-latest
+  #   steps:
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - uses: actions/checkout@v2
 
-      # Setup Unity using actions
-      - name: Setup Unity
-        id: setup-unity
-        uses: kuler90/setup-unity@v1.0.7
-        with:
-          project-path: ${{ github.workspace }}/DragonCrasher
+  #     # Setup Unity using actions
+  #     - name: Setup Unity
+  #       id: setup-unity
+  #       uses: kuler90/setup-unity@v1.0.7
+  #       with:
+  #         project-path: ${{ github.workspace }}/DragonCrasher
 
-      # Output
-      - name: Print output
-        run: |
-          echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
-          echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
-          echo env UNITY_PATH: ${{ env.UNITY_PATH }}
+  #     # Output
+  #     - name: Print output
+  #       run: |
+  #         echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
+  #         echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
+  #         echo env UNITY_PATH: ${{ env.UNITY_PATH }}
 
-  windows:
-    runs-on: 	windows-latest
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+  # windows:
+  #   runs-on: windows-latest
+  #   steps:
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - uses: actions/checkout@v2
 
-      # Setup Unity using actions
-      - name: Setup Unity
-        id: setup-unity
-        uses: kuler90/setup-unity@v1.0.7
-        with:
-          project-path: ${{ github.workspace }}\DragonCrasher
+  #     # Setup Unity using actions
+  #     - name: Setup Unity
+  #       id: setup-unity
+  #       uses: kuler90/setup-unity@v1.0.7
+  #       with:
+  #         project-path: ${{ github.workspace }}\DragonCrasher
 
-      # Output
-      - name: Print output
-        run: |
-          echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
-          echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
-          echo env UNITY_PATH: ${{ env.UNITY_PATH }}
+  #     # Output
+  #     - name: Print output
+  #       run: |
+  #         echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
+  #         echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
+  #         echo env UNITY_PATH: ${{ env.UNITY_PATH }}
