--- a/services-config.json
+++ b/services-config.json
@@ -1,5 +1,5 @@
 {
-    "licensingServiceBaseUrl": "http://35.200.34.197:8080",
+    "licensingServiceBaseUrl": "http://35.200.34.197:8080/",
     "enableEntitlementLicensing": true,
     "enableFloatingApi": true,
     "clientConnectTimeoutSec": 5,
