--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,14 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: test http weget
-        run: wget http://35.200.34.197:8080/v1/status
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: test http weget
+  #       run: wget http://35.200.34.197:8080/v1/status
 
-      - name: test http curl
-        run: curl http://35.200.34.197:8080/v1/status
+  #     - name: test http curl
+  #       run: curl http://35.200.34.197:8080/v1/status
 
 
   # linux:
@@ -34,7 +34,6 @@ jobs:
   #     - name: Move config file
   #       run: |
   #         pwd
-          
   #         mkdir -p /usr/share/unity3d/config
   #         mv ./services-config.json /usr/share/unity3d/config/services-config.json
 
@@ -82,22 +81,30 @@ jobs:
   #         echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
   #         echo env UNITY_PATH: ${{ env.UNITY_PATH }}
 
-  # windows:
-  #   runs-on: windows-latest
-  #   steps:
-  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-  #     - uses: actions/checkout@v2
+  windows:
+    runs-on: windows-latest
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-  #     # Setup Unity using actions
-  #     - name: Setup Unity
-  #       id: setup-unity
-  #       uses: kuler90/setup-unity@v1.0.7
-  #       with:
-  #         project-path: ${{ github.workspace }}\DragonCrasher
+      - name: Move config file
+        run: |
+          md 	%PROGRAMDATA%\Unity\config\ > NUL 2>&1
+          move .\services-config.json %PROGRAMDATA%\Unity\config\services-config.json
 
-  #     # Output
-  #     - name: Print output
-  #       run: |
-  #         echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
-  #         echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
-  #         echo env UNITY_PATH: ${{ env.UNITY_PATH }}
+      # Setup Unity using actions
+      - name: Setup Unity
+        id: setup-unity
+        uses: kuler90/setup-unity@v1.0.7
+        with:
+          project-path: ${{ github.workspace }}\DragonCrasher
+      
+      - name: Build Player
+        run: |
+          ${{ env.UNITY_PATH }} -quit -batchmode -projectPath ${{ github.workspace }}\DragonCrasher -buildWindows64Player  ${{ github.workspace }}\DragonCrasher\build
+
+      - name: Archive build player results
+        uses: actions/upload-artifact@v2
+        with:
+          name: buildplayer
+          path: ${{ github.workspace }}\DragonCrasher\build
