--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,41 +25,41 @@ jobs:
   #       run: curl http://35.200.34.197:8080/v1/status
 
 
-  # linux:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-  #     - uses: actions/checkout@v2
+  linux:
+    runs-on: ubuntu-latest
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-  #     - name: Move config file
-  #       run: |
-  #         pwd
-  #         mkdir -p /usr/share/unity3d/config
-  #         mv ./services-config.json /usr/share/unity3d/config/services-config.json
+      - name: Move config file
+        run: |
+          pwd
+          mkdir -p /usr/share/unity3d/config
+          mv ./services-config.json /usr/share/unity3d/config/services-config.json
 
-  #     # Setup Unity using actions
-  #     - name: Setup Unity
-  #       id: setup-unity
-  #       uses: kuler90/setup-unity@v1.0.7
-  #       with:
-  #         project-path: ${{ github.workspace }}/DragonCrasher
+      # Setup Unity using actions
+      - name: Setup Unity
+        id: setup-unity
+        uses: kuler90/setup-unity@v1.0.7
+        with:
+          project-path: ${{ github.workspace }}/DragonCrasher
 
-  #     # Output
-  #     - name: Print output
-  #       run: |
-  #         echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
-  #         echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
-  #         echo env UNITY_PATH: ${{ env.UNITY_PATH }}
+      # Output
+      - name: Print output
+        run: |
+          echo unity-version: ${{ steps.setup-unity.outputs.unity-version }}
+          echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
+          echo env UNITY_PATH: ${{ env.UNITY_PATH }}
       
-  #     - name: Build Player
-  #       run: |
-  #         ${{ env.UNITY_PATH }} -quit -batchmode -projectPath ${{ github.workspace }}/DragonCrasher -buildLinux64Player  ${{ github.workspace }}/DragonCrasher/build
+      - name: Build Player
+        run: |
+          ${{ env.UNITY_PATH }} -quit -batchmode -projectPath ${{ github.workspace }}/DragonCrasher -buildLinux64Player  ${{ github.workspace }}/DragonCrasher/build
 
-  #     - name: Archive build player results
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: buildplayer
-  #         path: ${{ github.workspace }}/DragonCrasher/build
+      - name: Archive build player results
+        uses: actions/upload-artifact@v2
+        with:
+          name: buildplayer
+          path: ${{ github.workspace }}/DragonCrasher/build
 
   # macos:
   #   runs-on: macos-latest
@@ -89,7 +89,7 @@ jobs:
 
       - name: Move config file
         run: |
-          md 	%PROGRAMDATA%\Unity\config\
+          md %PROGRAMDATA%\Unity\config\
           move .\services-config.json %PROGRAMDATA%\Unity\config\services-config.json
 
       # Setup Unity using actions
@@ -101,7 +101,7 @@ jobs:
       
       - name: Build Player
         run: |
-          ${{ env.UNITY_PATH }} -quit -batchmode -projectPath ${{ github.workspace }}\DragonCrasher -buildWindows64Player  ${{ github.workspace }}\DragonCrasher\build
+          "${{ env.UNITY_PATH }}" -quit -batchmode -projectPath "${{ github.workspace }}\DragonCrasher" -buildWindows64Player  "${{ github.workspace }}\DragonCrasher\build"
 
       - name: Archive build player results
         uses: actions/upload-artifact@v2
