--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,27 +15,20 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: test http weget
-  #       run: wget http://35.200.34.197:8080/v1/status
-
-  #     - name: test http curl
-  #       run: curl http://35.200.34.197:8080/v1/status
-
-
   linux:
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Move config file
-        run: |
-          pwd
-          mkdir -p /usr/share/unity3d/config
-          mv ./services-config.json /usr/share/unity3d/config/services-config.json
+      - name: Create Services Config
+        uses: CreateServicesConfig/
+        with:
+          licensingServiceBaseUrl: 'http://35.200.34.197:8080/'
+          enableEntitlementLicensing: true
+          enableFloatingApi: true
+          clientConnectTimeoutSec: 5
+          clientHandshakeTimeoutSec: 10
 
       # Setup Unity using actions
       - name: Setup Unity
