--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,30 +74,30 @@ jobs:
   #         echo unity-path: ${{ steps.setup-unity.outputs.unity-path }}
   #         echo env UNITY_PATH: ${{ env.UNITY_PATH }}
 
-  windows:
-    runs-on: windows-latest
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+  # windows:
+  #   runs-on: windows-latest
+  #   steps:
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - uses: actions/checkout@v2
 
-      - name: Move config file
-        run: |
-          md %PROGRAMDATA%\Unity\config\
-          move .\services-config.json %PROGRAMDATA%\Unity\config\services-config.json
+  #     - name: Move config file
+  #       run: |
+  #         md %PROGRAMDATA%\Unity\config\
+  #         move .\services-config.json %PROGRAMDATA%\Unity\config\services-config.json
 
-      # Setup Unity using actions
-      - name: Setup Unity
-        id: setup-unity
-        uses: kuler90/setup-unity@v1.0.7
-        with:
-          project-path: ${{ github.workspace }}\DragonCrasher
+  #     # Setup Unity using actions
+  #     - name: Setup Unity
+  #       id: setup-unity
+  #       uses: kuler90/setup-unity@v1.0.7
+  #       with:
+  #         project-path: ${{ github.workspace }}\DragonCrasher
       
-      - name: Build Player
-        run: |
-          "${{ env.UNITY_PATH }}" -quit -batchmode -projectPath "${{ github.workspace }}\DragonCrasher" -buildWindows64Player  "${{ github.workspace }}\DragonCrasher\build"
+  #     - name: Build Player
+  #       run: |
+  #         "${{ env.UNITY_PATH }}" -quit -batchmode -projectPath "${{ github.workspace }}\DragonCrasher" -buildWindows64Player  "${{ github.workspace }}\DragonCrasher\build"
 
-      - name: Archive build player results
-        uses: actions/upload-artifact@v2
-        with:
-          name: buildplayer
-          path: ${{ github.workspace }}\DragonCrasher\build
+  #     - name: Archive build player results
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: buildplayer
+  #         path: ${{ github.workspace }}\DragonCrasher\build
