--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Create Services Config
-        uses: kannan-xiao4/Unity-CreateServicesConfig-For-LicenseServer@v1
+        uses: kannan-xiao4/Unity-CreateServicesConfig-For-LicenseServer@main
         with:
           licensingServiceBaseUrl: 'http://35.200.34.197:8080/'
           enableEntitlementLicensing: true
