--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         id: createservicesconfig
         uses: kannan-xiao4/Unity-CreateServicesConfig-For-LicenseServer@main
         with:
-          licensingServiceBaseUrl: 'http://35.200.34.197:8080'
+          licensingServiceBaseUrl: 'http://{YOUR-LICENSE-SERVER-ADDRESS:PORT}'
           enableEntitlementLicensing: true
           enableFloatingApi: true
           clientConnectTimeoutSec: 5
@@ -51,7 +51,7 @@ jobs:
   #       id: createservicesconfig
   #       uses: kannan-xiao4/Unity-CreateServicesConfig-For-LicenseServer@main
   #       with:
-  #         licensingServiceBaseUrl: 'http://35.200.34.197:8080'
+  #         licensingServiceBaseUrl: 'http://{YOUR-LICENSE-SERVER-ADDRESS:PORT}'
   #         enableEntitlementLicensing: true
   #         enableFloatingApi: true
   #         clientConnectTimeoutSec: 5
@@ -84,7 +84,7 @@ jobs:
   #       id: createservicesconfig
   #       uses: kannan-xiao4/Unity-CreateServicesConfig-For-LicenseServer@main
   #       with:
-  #         licensingServiceBaseUrl: 'http://35.200.34.197:8080'
+  #         licensingServiceBaseUrl: 'http://{YOUR-LICENSE-SERVER-ADDRESS:PORT}'
   #         enableEntitlementLicensing: true
   #         enableFloatingApi: true
   #         clientConnectTimeoutSec: 5
